tests/errors/sem28.kt
// Expected error: if condition must be Boolean
fun main() {
    val x: Int = 5;
    if (x) {
        println("oops");
    }
}